# orvin

./: .gitignore  Cargo.toml  run_dev.bat  run_dev.sh
.github/workflows/: ci.yml
src/: lib.rs  main.rs  utils.rs
src/commands/: events.rs  global.rs  macros.rs  mod.rs
src/net/: components.rs  messages.rs  mod.rs
src/tui/: draw.rs  input.rs  mod.rs
src/tui/input/: command.rs  events.rs  mod.rs
