[package]
name = "orvin"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[features]
# Enables a testin command that does nothing for development purposes (likely temporary)
test-command = []

[dependencies]
bevy = "0.12.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.29"
itertools = "0.12.0"
lightyear = "0.5.0"
linkme = "0.3.20"
ratatui = "0.25.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
