[package]
name = "orvin"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[features]
# Feature to enable all of the features useful in development
dev = ["test-command", "bevy/dynamic_linking"]

# Enables a testing command that does very little, for development purposes (likely temporary)
test-command = []

[dependencies]
bevy = { version = "0.13.0", default-features = false }
chrono = "0.4.31"
crossterm = { version = "0.27.0", features = ["event-stream"] }
dyn-clone = "1.0.16"
dyn-eq = "0.1.3"
futures = "0.3.29"
linkme = "0.3.20"
paste = "1.0.14"
ratatui = "0.25.0"
serde = "1.0.193"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
typetag = "0.2.15"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
